Link dump from phone

--- a/research/ch341a.md
+++ b/research/ch341a.md
@@ -1,3 +1,4 @@
 # CH341A
 
 * How to Use a CH341A SPI Programmer/Flasher - https://winraid.level1techs.com/t/guide-how-to-use-a-ch341a-spi-programmer-flasher-with-pictures/33041/1
+* Voltage fix - https://github.com/OpenIPC/wiki/blob/master/en/hardware-programmer-ch341a-voltage-fix.md
